--- a/Demo.PL/appsettings.json
+++ b/Demo.PL/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaiultConnection": "Server=.; database=MVC_Demo01; Trusted_connection=True;"
+    }
 }
