--- a/Demo.PL/appsettings.json
+++ b/Demo.PL/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaiultConnection": "Server=.; database=MVC_Demo01; Trusted_connection=True;TrustServerCertificate=false ;Encrypt=false"
+        "DefaiultConnection": "Server=.; database=MVC_Demo01; Trusted_connection=True;TrustServerCertificate=false ;Encrypt=false;MultipleActiveResultSets=True;"
     }
 }
