--- a/Demo.PL/Demo.PL.csproj
+++ b/Demo.PL/Demo.PL.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Demo.BLL\Demo.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Images\" />
+    <Folder Include="wwwroot\Files\Videos\" />
+    <Folder Include="wwwroot\Files\PDFS\" />
+  </ItemGroup>
+
 </Project>
